# honyaku

./: AGENTS.md  Cargo.toml  README.md  dot.honyaku-env
src/: api.rs  cli.rs  detect.rs  env.rs  input.rs  lib.rs  main.rs  repl.rs  translate.rs
